[package]
name = "rawp_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
wasm-bindgen = "0.2"
